[gd_scene load_steps=8 format=3 uid="uid://cwwwb62f1o11r"]

[ext_resource type="Script" uid="uid://brhdalnqii0vr" path="res://ui/floating/info_bar.gd" id="1_ads7g"]
[ext_resource type="Texture2D" uid="uid://bipur35feflj7" path="res://assets/Wenrexa Interface UI KIT #4/PNG/ProgressBar_06/BarV6_Bar.png" id="2_kvtt4"]
[ext_resource type="Texture2D" uid="uid://dhuhtlyuulk14" path="res://assets/Wenrexa Interface UI KIT #4/PNG/ProgressBar_05/BarV5_ProgressBar.png" id="4_gtjej"]
[ext_resource type="Texture2D" uid="uid://dupgo4uao7147" path="res://assets/Wenrexa Interface UI KIT #4/PNG/Icons/Circle02.png" id="5_0hk5p"]
[ext_resource type="Texture2D" uid="uid://dqxr64jju4npg" path="res://assets/Wenrexa Interface UI KIT #4/PNG/Panel04.png" id="6_yisk7"]

[sub_resource type="LabelSettings" id="LabelSettings_w6i3i"]
font_size = 66
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_f22a0"]
font_size = 32
font_color = Color(0, 0, 0, 1)

[node name="InfoBar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1152.0
offset_bottom = -648.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.32, 0.32)
size_flags_horizontal = 4
size_flags_vertical = 0
script = ExtResource("1_ads7g")

[node name="Background" type="Panel" parent="."]
layout_mode = 0
offset_right = 597.0
offset_bottom = 200.0

[node name="Health" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 9.375
offset_top = 171.875
offset_right = 281.375
offset_bottom = 192.875
scale = Vector2(2.13, 1)
texture_under = ExtResource("2_kvtt4")
texture_progress = ExtResource("4_gtjej")

[node name="LevelBG" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 12.0
offset_right = 135.0
offset_bottom = 142.0
texture = ExtResource("5_0hk5p")

[node name="LevelLabel" type="Label" parent="LevelBG"]
layout_mode = 0
offset_left = 7.5
offset_top = 3.625
offset_right = 120.5
offset_bottom = 128.625
text = "100"
label_settings = SubResource("LabelSettings_w6i3i")
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameBG" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 142.0
offset_top = 7.0
offset_right = 585.0
offset_bottom = 56.0
texture = ExtResource("6_yisk7")

[node name="NameLabel" type="Label" parent="NameBG"]
layout_mode = 0
offset_left = 5.0
offset_top = 7.0
offset_right = 438.0
offset_bottom = 52.0
text = "Player"
label_settings = SubResource("LabelSettings_f22a0")
